templates/k8s/ingress-rewrite.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rewrite-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /pay
            backend: 
              serviceName: pay-service
              servicePort: 8282

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rewrite-ingress-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: rewrite.bar.com
      http:
        paths:
          - path: /something(/|$)(.*)
            backend:
              serviceName: http-svc
              servicePort: 80
